# Daedalus

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
DaedalusBot/: Dockerfile
DaedalusSearch/: Dockerfile  main.py
DaedalusSearch/daedalus_search/: entrypoint.py  model.py  paper_search.py  server.py
scripts/: discord_bot.py  paper_search.py  setup_env.py
tests/: conftest.py  test_discord_bot.py  test_paper_search.py
